--- a/resources/sass/invoices.scss
+++ b/resources/sass/invoices.scss
@@ -18,9 +18,9 @@
 .hidden-part{
   max-height: 0;
   overflow: hidden;
-  transition: all .75s ease;
+  transition: all 400ms ease-in-out;
 }
 
 .hidden-part .show-hidden{
-  height: 100px !important; ;
+  max-height: 5rem !important ;
 }
