recator update form good button management -> removed event listener on children -> add event listener on parent and check what child more complete

--- a/resources/sass/invoices.scss
+++ b/resources/sass/invoices.scss
@@ -24,3 +24,10 @@
 .hidden-part .show-hidden{
   max-height: 5rem !important ;
 }
+
+#items .item-row .add-item{
+  visibility: hidden;
+}
+#items .item-row:last-child .add-item{
+  visibility: visible;
+}
