--- a/public/css/app.css
+++ b/public/css/app.css
@@ -396,22 +396,12 @@ Ensure the default browser behavior of the `hidden` attribute.
   white-space: nowrap;
   border-width: 0;
 }
-.absolute{
-  position: absolute;
-}
-.relative{
-  position: relative;
-}
 .m-0{
   margin: 0px;
 }
-.my-2{
-  margin-top: 0.5rem;
-  margin-bottom: 0.5rem;
-}
-.my-6{
-  margin-top: 1.5rem;
-  margin-bottom: 1.5rem;
+.mx-12{
+  margin-left: 3rem;
+  margin-right: 3rem;
 }
 .mb-5{
   margin-bottom: 1.25rem;
@@ -431,24 +421,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 .ml-auto{
   margin-left: auto;
 }
-.mr-12{
-  margin-right: 3rem;
-}
-.mb-12{
-  margin-bottom: 3rem;
-}
-.-mt-6{
-  margin-top: -1.5rem;
-}
-.-mt-12{
-  margin-top: -3rem;
-}
-.-ml-12{
-  margin-left: -3rem;
-}
-.ml-12{
-  margin-left: 3rem;
-}
 .mt-12{
   margin-top: 3rem;
 }
@@ -467,68 +439,17 @@ Ensure the default browser behavior of the `hidden` attribute.
 .hidden{
   display: none;
 }
-.h-screen{
-  height: 100vh;
-}
-.h-0{
-  height: 0px;
-}
-.h-1{
-  height: 0.25rem;
-}
-.w-min{
-  width: -webkit-min-content;
-  width: -moz-min-content;
-  width: min-content;
-}
 .w-full{
   width: 100%;
+}
+.flex-row{
+  flex-direction: row;
 }
 .flex-col{
   flex-direction: column;
 }
-.items-end{
-  align-items: flex-end;
-}
-.items-center{
-  align-items: center;
-}
-.justify-end{
-  justify-content: flex-end;
-}
-.justify-center{
-  justify-content: center;
-}
 .rounded{
   border-radius: 0.25rem;
-}
-.rounded-md{
-  border-radius: 0.375rem;
-}
-.rounded-lg{
-  border-radius: 0.5rem;
-}
-.border{
-  border-width: 1px;
-}
-.border-b-2{
-  border-bottom-width: 2px;
-}
-.border-slate-700{
-  --tw-border-opacity: 1;
-  border-color: rgb(51 65 85 / var(--tw-border-opacity));
-}
-.border-slate-100{
-  --tw-border-opacity: 1;
-  border-color: rgb(241 245 249 / var(--tw-border-opacity));
-}
-.border-slate-300{
-  --tw-border-opacity: 1;
-  border-color: rgb(203 213 225 / var(--tw-border-opacity));
-}
-.border-slate-500{
-  --tw-border-opacity: 1;
-  border-color: rgb(100 116 139 / var(--tw-border-opacity));
 }
 .border-slate-200{
   --tw-border-opacity: 1;
@@ -538,6 +459,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
+.bg-slate-50{
+  --tw-bg-opacity: 1;
+  background-color: rgb(248 250 252 / var(--tw-bg-opacity));
+}
 .bg-slate-500{
   --tw-bg-opacity: 1;
   background-color: rgb(100 116 139 / var(--tw-bg-opacity));
@@ -545,55 +470,22 @@ Ensure the default browser behavior of the `hidden` attribute.
 .bg-transparent{
   background-color: transparent;
 }
-.bg-slate-50{
-  --tw-bg-opacity: 1;
-  background-color: rgb(248 250 252 / var(--tw-bg-opacity));
-}
 .bg-slate-800{
   --tw-bg-opacity: 1;
   background-color: rgb(30 41 59 / var(--tw-bg-opacity));
 }
-.bg-auth{
-  background-image: url('/img/invoice-bg.webp');
-}
-.bg-cover{
-  background-size: cover;
-}
 .p-3{
   padding: 0.75rem;
 }
-.p-2{
-  padding: 0.5rem;
-}
 .p-0{
   padding: 0px;
-}
-.p-12{
-  padding: 3rem;
-}
-.p-1{
-  padding: 0.25rem;
 }
 .py-4{
   padding-top: 1rem;
   padding-bottom: 1rem;
 }
-.py-6{
-  padding-top: 1.5rem;
-  padding-bottom: 1.5rem;
-}
-.px-12{
-  padding-left: 3rem;
-  padding-right: 3rem;
-}
 .pt-5{
   padding-top: 1.25rem;
-}
-.pt-2{
-  padding-top: 0.5rem;
-}
-.text-left{
-  text-align: left;
 }
 .text-center{
   text-align: center;
@@ -601,46 +493,18 @@ Ensure the default browser behavior of the `hidden` attribute.
 .align-baseline{
   vertical-align: baseline;
 }
-.font-header{
-  font-family: Fira Sans, sans-serif;
-}
-.font-body{
-  font-family: Montserrat, sans-serif;
-}
-.text-lg{
-  font-size: 1.125rem;
-  line-height: 1.75rem;
-}
-.text-xl{
-  font-size: 1.25rem;
-  line-height: 1.75rem;
-}
 .text-sm{
   font-size: 0.875rem;
   line-height: 1.25rem;
 }
-.text-2xl{
-  font-size: 1.5rem;
-  line-height: 2rem;
-}
-.text-4xl{
-  font-size: 2.25rem;
-  line-height: 2.5rem;
-}
-.font-black{
-  font-weight: 900;
-}
 .font-bold{
   font-weight: 700;
-}
-.font-light{
-  font-weight: 300;
 }
 .font-thin{
   font-weight: 100;
 }
-.uppercase{
-  text-transform: uppercase;
+.font-black{
+  font-weight: 900;
 }
 .text-gray-50{
   --tw-text-opacity: 1;
@@ -659,50 +523,144 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-shadow-colored: 0 1px 2px 0 var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
-.focus-within\:border-slate-500:focus-within{
-  --tw-border-opacity: 1;
-  border-color: rgb(100 116 139 / var(--tw-border-opacity));
+
+/**********************************/
+/* Authentication pages container */
+/*********************************/
+
+#auth-page{
+  display: flex;
+  min-height: 100vh;
+  flex-direction: column;
+  background-image: url('/img/invoice-bg.webp');
+  background-size: cover;
+  background-repeat: no-repeat;
 }
+
+#auth-page header{
+  margin-left: 3rem;
+  margin-right: 3rem;
+  margin-top: 3rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  --tw-text-opacity: 1;
+  color: rgb(248 250 252 / var(--tw-text-opacity));
+}
+
+#auth-page header h1{
+  font-size: 2.25rem;
+  line-height: 2.5rem;
+  font-weight: 900;
+  text-transform: uppercase;
+}
+
+#auth-page main{
+  display: flex;
+  min-height: 100vh;
+  width: 100%;
+  align-items: center;
+  justify-content: center;
+  font-family: Montserrat, sans-serif;
+}
+
+@media (min-width: 768px){
+  #auth-page main{
+    align-items: flex-end;
+  }
+  #auth-page main{
+    justify-content: flex-end;
+  }
+}
+#auth-page main #app{
+  margin-top: 3rem;
+  margin-bottom: 3rem;
+  display: flex;
+  width: -webkit-min-content;
+  width: -moz-min-content;
+  width: min-content;
+  background-color: transparent;
+  padding: 0px;
+}
+@media (min-width: 768px){
+  #auth-page main #app{
+    margin-right: 3rem;
+  }
+  #auth-page main #app{
+    margin-bottom: 3rem;
+  }
+}
+
+#auth-page footer{
+  text-align: center;
+  --tw-text-opacity: 1;
+  color: rgb(248 250 252 / var(--tw-text-opacity));
+}
+
+
+/*
+Login page
+ */
+
+.card{
+  border-radius: 0.5rem;
+}
+
+.card .card-header{
+  padding: 0.5rem;
+  font-family: Fira Sans, sans-serif;
+  font-size: 1.25rem;
+  line-height: 1.75rem;
+  font-weight: 900;
+}
+
+.card .card-body{
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
+  padding-left: 3rem;
+  padding-right: 3rem;
+}
+
+form .form-row{
+  margin-top: 1.5rem;
+  margin-bottom: 1.5rem;
+  display: flex;
+  flex-direction: column;
+}
+form .form-row input{
+  border-bottom-width: 2px;
+}
+form .form-row input:focus{
+  outline: 2px solid transparent;
+  outline-offset: 2px;
+}
+
+form .form-row input.form-control{
+  --tw-border-opacity: 1;
+  border-color: rgb(226 232 240 / var(--tw-border-opacity));
+  background-color: transparent;
+}
+
+form .form-row input.form-control:focus-within{
+  --tw-border-opacity: 1;
+  border-color: rgb(71 85 105 / var(--tw-border-opacity));
+}
+
 .focus-within\:border-slate-600:focus-within{
   --tw-border-opacity: 1;
   border-color: rgb(71 85 105 / var(--tw-border-opacity));
 }
+
 .hover\:font-bold:hover{
   font-weight: 700;
 }
-.focus\:border-slate-200:focus{
-  --tw-border-opacity: 1;
-  border-color: rgb(226 232 240 / var(--tw-border-opacity));
-}
-.focus\:outline-none:focus{
-  outline: 2px solid transparent;
-  outline-offset: 2px;
-}
-.active\:h-12:active{
-  height: 3rem;
-}
-.active\:h-4:active{
-  height: 1rem;
-}
-@media (min-width: 640px){
-  .sm\:items-center{
-    align-items: center;
-  }
-  .sm\:justify-center{
-    justify-content: center;
-  }
-}
+
 @media (min-width: 768px){
-  .md\:mr-12{
+  .md\:mx-12{
+    margin-left: 3rem;
     margin-right: 3rem;
   }
-  .md\:mb-12{
-    margin-bottom: 3rem;
-  }
-  .md\:items-end{
-    align-items: flex-end;
-  }
-  .md\:justify-end{
-    justify-content: flex-end;
+  .md\:flex-row{
+    flex-direction: row;
   }
 }
