--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -2,3 +2,58 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/**********************************/
+/* Authentication pages container */
+/*********************************/
+
+#auth-page{
+    @apply bg-auth bg-cover bg-no-repeat flex flex-col min-h-screen;
+}
+
+#auth-page header{
+    @apply text-slate-50 ml-12 mr-12 mt-12  flex items-center justify-between;
+}
+
+#auth-page header h1{
+    @apply text-4xl font-black uppercase;
+}
+
+#auth-page main{
+    @apply w-full min-h-screen flex  justify-center  items-center md:justify-end md:items-end font-body;
+}
+#auth-page main #app{
+    @apply flex md:mr-12 md:mb-12 my-12 p-0 w-min bg-transparent;
+}
+
+#auth-page footer{
+    @apply text-center text-slate-50;
+}
+
+
+/*
+Login page
+ */
+
+.card{
+    @apply rounded-lg;
+}
+
+.card .card-header{
+    @apply  p-2 text-xl font-black font-header;
+}
+
+.card .card-body{
+    @apply  py-6 px-12;
+}
+
+form .form-row{
+    @apply  my-6 flex flex-col;
+}
+form .form-row input{
+    @apply  border-b-2 focus:outline-none;
+}
+
+form .form-row input.form-control{
+    @apply bg-transparent border-slate-200 focus-within:border-slate-600 ;
+}
