--- a/public/css/app.css
+++ b/public/css/app.css
@@ -515,9 +515,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 .hidden{
   display: none;
 }
-.h-5{
-  height: 1.25rem;
-}
 .h-0{
   height: 0px;
 }
@@ -526,10 +523,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 .w-5{
   width: 1.25rem;
-}
-.rotate-90{
-  --tw-rotate: 90deg;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 .rotate-180{
   --tw-rotate: 180deg;
@@ -544,26 +537,17 @@ Ensure the default browser behavior of the `hidden` attribute.
 .flex-col{
   flex-direction: column;
 }
-.content-center{
-  align-content: center;
-}
 .items-center{
   align-items: center;
 }
 .justify-end{
   justify-content: flex-end;
 }
-.justify-center{
-  justify-content: center;
-}
 .justify-between{
   justify-content: space-between;
 }
 .overflow-hidden{
   overflow: hidden;
-}
-.rounded-full{
-  border-radius: 9999px;
 }
 .rounded{
   border-radius: 0.25rem;
@@ -579,18 +563,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-bg-opacity: 1;
   background-color: rgb(100 116 139 / var(--tw-bg-opacity));
 }
-.bg-slate-300{
-  --tw-bg-opacity: 1;
-  background-color: rgb(203 213 225 / var(--tw-bg-opacity));
-}
-.bg-blue-300{
-  --tw-bg-opacity: 1;
-  background-color: rgb(147 197 253 / var(--tw-bg-opacity));
-}
-.bg-slate-800{
-  --tw-bg-opacity: 1;
-  background-color: rgb(30 41 59 / var(--tw-bg-opacity));
-}
 .bg-white{
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
@@ -601,6 +573,10 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 .bg-transparent{
   background-color: transparent;
+}
+.bg-slate-800{
+  --tw-bg-opacity: 1;
+  background-color: rgb(30 41 59 / var(--tw-bg-opacity));
 }
 .bg-slate-700{
   --tw-bg-opacity: 1;
@@ -667,24 +643,15 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-text-opacity: 1;
   color: rgb(15 23 42 / var(--tw-text-opacity));
 }
-.transition-height{
-  transition-property: height;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  transition-duration: 150ms;
-}
 .transition-transform{
   transition-property: transform;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
 }
-.duration-1000{
-  transition-duration: 1000ms;
-}
-.duration-500{
-  transition-duration: 500ms;
-}
-.duration-700{
-  transition-duration: 700ms;
+.transition-height{
+  transition-property: height;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
 }
 .ease-in{
   transition-timing-function: cubic-bezier(0.4, 0, 1, 1);
@@ -912,6 +879,50 @@ nav .nav-link.active::after{
   height: 10rem;
 }
 
+.button{
+  display: flex;
+  height: 1.25rem;
+  align-items: center;
+  justify-content: center;
+  border-radius: 9999px;
+}
+
+@media (min-width: 768px){
+
+  .button{
+    height: 1.75rem;
+  }
+
+  .button{
+    width: 1.75rem;
+  }
+
+  .button{
+    cursor: pointer;
+  }
+}
+
+.primary{
+  --tw-bg-opacity: 1;
+  background-color: rgb(203 213 225 / var(--tw-bg-opacity));
+  --tw-text-opacity: 1;
+  color: rgb(15 23 42 / var(--tw-text-opacity));
+}
+
+.info{
+  --tw-bg-opacity: 1;
+  background-color: rgb(2 132 199 / var(--tw-bg-opacity));
+  --tw-text-opacity: 1;
+  color: rgb(248 250 252 / var(--tw-text-opacity));
+}
+
+.success{
+  --tw-bg-opacity: 1;
+  background-color: rgb(22 163 74 / var(--tw-bg-opacity));
+  --tw-text-opacity: 1;
+  color: rgb(248 250 252 / var(--tw-text-opacity));
+}
+
 .focus-within\:border-slate-600:focus-within{
   --tw-border-opacity: 1;
   border-color: rgb(71 85 105 / var(--tw-border-opacity));
@@ -934,18 +945,6 @@ nav .nav-link.active::after{
 
   .md\:hidden{
     display: none;
-  }
-
-  .md\:h-7{
-    height: 1.75rem;
-  }
-
-  .md\:w-7{
-    width: 1.75rem;
-  }
-
-  .md\:cursor-pointer{
-    cursor: pointer;
   }
 
   .md\:flex-row{
