--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -49,7 +49,7 @@ Login page
     @apply py-4 px-4 md:py-6 md:px-12;
 }
 
-.card .card-body .infos.expand{
+.card .card-body .infos.expand {
     @apply h-32;
 }
 
@@ -84,4 +84,23 @@ nav .nav-link.active {
 
 .menu-group.menu-open {
     @apply h-40
+}
+
+.button {
+    @apply
+    h-5 md:w-7 md:h-7
+    flex justify-center items-center rounded-full
+    md:cursor-pointer
+}
+
+.primary{
+    @apply bg-slate-300 text-slate-900
+}
+
+.info{
+    @apply bg-sky-600 text-slate-50
+}
+
+.success{
+    @apply bg-green-600 text-slate-50
 }
