--- a/public/css/app.css
+++ b/public/css/app.css
@@ -461,6 +461,9 @@ Ensure the default browser behavior of the `hidden` attribute.
     max-width: 1536px;
   }
 }
+.m-auto{
+  margin: auto;
+}
 .m-0{
   margin: 0px;
 }
@@ -475,9 +478,16 @@ Ensure the default browser behavior of the `hidden` attribute.
   margin-left: 0.25rem;
   margin-right: 0.25rem;
 }
+.my-auto{
+  margin-top: auto;
+  margin-bottom: auto;
+}
 .mx-3{
   margin-left: 0.75rem;
   margin-right: 0.75rem;
+}
+.mb-10{
+  margin-bottom: 2.5rem;
 }
 .mr-1{
   margin-right: 0.25rem;
@@ -518,11 +528,20 @@ Ensure the default browser behavior of the `hidden` attribute.
 .h-0{
   height: 0px;
 }
+.h-7{
+  height: 1.75rem;
+}
 .w-full{
   width: 100%;
 }
 .w-5{
   width: 1.25rem;
+}
+.w-40{
+  width: 10rem;
+}
+.w-7{
+  width: 1.75rem;
 }
 .rotate-180{
   --tw-rotate: 180deg;
@@ -530,6 +549,9 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 .cursor-pointer{
   cursor: pointer;
+}
+.cursor-not-allowed{
+  cursor: not-allowed;
 }
 .flex-row{
   flex-direction: row;
@@ -543,8 +565,14 @@ Ensure the default browser behavior of the `hidden` attribute.
 .justify-end{
   justify-content: flex-end;
 }
+.justify-center{
+  justify-content: center;
+}
 .justify-between{
   justify-content: space-between;
+}
+.self-start{
+  align-self: flex-start;
 }
 .overflow-hidden{
   overflow: hidden;
@@ -552,8 +580,31 @@ Ensure the default browser behavior of the `hidden` attribute.
 .rounded{
   border-radius: 0.25rem;
 }
+.rounded-full{
+  border-radius: 9999px;
+}
+.rounded-sm{
+  border-radius: 0.125rem;
+}
+.rounded-l{
+  border-top-left-radius: 0.25rem;
+  border-bottom-left-radius: 0.25rem;
+}
+.rounded-r{
+  border-top-right-radius: 0.25rem;
+  border-bottom-right-radius: 0.25rem;
+}
 .border{
   border-width: 1px;
+}
+.border-t{
+  border-top-width: 1px;
+}
+.border-b{
+  border-bottom-width: 1px;
+}
+.border-l{
+  border-left-width: 1px;
 }
 .border-slate-200{
   --tw-border-opacity: 1;
@@ -562,6 +613,10 @@ Ensure the default browser behavior of the `hidden` attribute.
 .bg-slate-500{
   --tw-bg-opacity: 1;
   background-color: rgb(100 116 139 / var(--tw-bg-opacity));
+}
+.bg-slate-200{
+  --tw-bg-opacity: 1;
+  background-color: rgb(226 232 240 / var(--tw-bg-opacity));
 }
 .bg-white{
   --tw-bg-opacity: 1;
@@ -602,6 +657,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   padding-left: 0.75rem;
   padding-right: 0.75rem;
 }
+.py-2{
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+}
 .pt-5{
   padding-top: 1.25rem;
 }
@@ -635,6 +694,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-text-opacity: 1;
   color: rgb(248 250 252 / var(--tw-text-opacity));
 }
+.text-slate-700{
+  --tw-text-opacity: 1;
+  color: rgb(51 65 85 / var(--tw-text-opacity));
+}
 .text-gray-50{
   --tw-text-opacity: 1;
   color: rgb(249 250 251 / var(--tw-text-opacity));
@@ -642,6 +705,10 @@ Ensure the default browser behavior of the `hidden` attribute.
 .text-slate-900{
   --tw-text-opacity: 1;
   color: rgb(15 23 42 / var(--tw-text-opacity));
+}
+.no-underline{
+  -webkit-text-decoration-line: none;
+          text-decoration-line: none;
 }
 .transition-transform{
   transition-property: transform;
@@ -736,6 +803,12 @@ Ensure the default browser behavior of the `hidden` attribute.
   color: rgb(248 250 252 / var(--tw-text-opacity));
 }
 
+#app footer{
+  text-align: center;
+  --tw-text-opacity: 1;
+  color: rgb(100 116 139 / var(--tw-text-opacity));
+}
+
 
 /*
 Login page
@@ -758,19 +831,6 @@ Login page
   padding-bottom: 1rem;
   padding-left: 1rem;
   padding-right: 1rem;
-}
-
-@media (min-width: 768px){
-
-  .card .card-body{
-    padding-top: 1.5rem;
-    padding-bottom: 1.5rem;
-  }
-
-  .card .card-body{
-    padding-left: 3rem;
-    padding-right: 3rem;
-  }
 }
 
 .card .card-body .infos.expand{
@@ -882,6 +942,7 @@ nav .nav-link.active::after{
 .button{
   display: flex;
   height: 1.25rem;
+  width: 1.75rem;
   align-items: center;
   justify-content: center;
   border-radius: 9999px;
@@ -902,11 +963,62 @@ nav .nav-link.active::after{
   }
 }
 
+.button-text{
+  margin-left: 0px;
+  margin-right: 0px;
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+  align-items: center;
+  padding: 0.25rem;
+}
+
+@media (min-width: 768px){
+
+  .button-text{
+    padding: 0.75rem;
+  }
+}
+.button-text:first-child{
+  margin-right: 0.25rem;
+  padding: 0.75rem;
+}
+/*.button-text:last-child{*/
+/*    @apply p-3 ml-1*/
+/*}*/
+.button-text .icon{
+  margin: auto;
+  display: flex;
+  height: 1.75rem;
+  width: 1.75rem;
+  align-items: center;
+  justify-content: center;
+  border-radius: 9999px;
+}
+.button-text .label{
+  display: none;
+  flex-direction: column;
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+}
+@media (min-width: 768px){
+
+  .button-text .label{
+    display: flex;
+  }
+}
+
 .primary{
   --tw-bg-opacity: 1;
   background-color: rgb(203 213 225 / var(--tw-bg-opacity));
   --tw-text-opacity: 1;
   color: rgb(15 23 42 / var(--tw-text-opacity));
+}
+.secondary{
+  --tw-bg-opacity: 1;
+  background-color: rgb(15 23 42 / var(--tw-bg-opacity));
+  --tw-text-opacity: 1;
+  color: rgb(248 250 252 / var(--tw-text-opacity));
 }
 
 .info{
@@ -922,16 +1034,27 @@ nav .nav-link.active::after{
   --tw-text-opacity: 1;
   color: rgb(248 250 252 / var(--tw-text-opacity));
 }
-
+.danger{
+  --tw-bg-opacity: 1;
+  background-color: rgb(220 38 38 / var(--tw-bg-opacity));
+  --tw-text-opacity: 1;
+  color: rgb(248 250 252 / var(--tw-text-opacity));
+}
+.odd\:bg-white:nth-child(odd){
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+.even\:bg-slate-100:nth-child(even){
+  --tw-bg-opacity: 1;
+  background-color: rgb(241 245 249 / var(--tw-bg-opacity));
+}
 .focus-within\:border-slate-600:focus-within{
   --tw-border-opacity: 1;
   border-color: rgb(71 85 105 / var(--tw-border-opacity));
 }
-
 .hover\:font-bold:hover{
   font-weight: 700;
 }
-
 @media (min-width: 768px){
 
   .md\:mx-12{
@@ -939,12 +1062,28 @@ nav .nav-link.active::after{
     margin-right: 3rem;
   }
 
+  .md\:mb-0{
+    margin-bottom: 0px;
+  }
+
+  .md\:mr-2{
+    margin-right: 0.5rem;
+  }
+
   .md\:mt-0{
     margin-top: 0px;
   }
 
+  .md\:flex{
+    display: flex;
+  }
+
   .md\:hidden{
     display: none;
+  }
+
+  .md\:w-1\/2{
+    width: 50%;
   }
 
   .md\:flex-row{
