--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -32,6 +32,10 @@
     @apply text-center text-slate-50;
 }
 
+#app footer {
+    @apply text-center text-slate-500;
+}
+
 
 /*
 Login page
@@ -46,7 +50,7 @@ Login page
 }
 
 .card .card-body {
-    @apply py-4 px-4 md:py-6 md:px-12;
+    @apply py-4 px-4 /*md:py-6 md:px-12*/;
 }
 
 .card .card-body .infos.expand {
@@ -88,13 +92,38 @@ nav .nav-link.active {
 
 .button {
     @apply
-    h-5 md:w-7 md:h-7
+    h-5 w-7 md:w-7 md:h-7
     flex justify-center items-center rounded-full
     md:cursor-pointer
 }
 
+.button-text{
+    @apply flex flex-col
+    p-1 md:p-3 mx-0
+    content-center items-center
+}
+.button-text:first-child{
+    @apply p-3 mr-1
+}
+/*.button-text:last-child{*/
+/*    @apply p-3 ml-1*/
+/*}*/
+.button-text .icon{
+    @apply flex
+    m-auto w-7 h-7
+    items-center justify-center
+    rounded-full
+}
+.button-text .label{
+    @apply hidden md:flex flex-col
+    text-sm
+}
+
 .primary{
     @apply bg-slate-300 text-slate-900
+}
+.secondary{
+    @apply bg-slate-900 text-slate-50
 }
 
 .info{
@@ -103,4 +132,7 @@ nav .nav-link.active {
 
 .success{
     @apply bg-green-600 text-slate-50
+}
+.danger{
+    @apply bg-red-600 text-slate-50
 }
