--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -92,7 +92,7 @@ nav .nav-link.active {
 
 .button {
     @apply
-    h-5 w-7 md:w-7 md:h-7
+    w-7 h-7
     flex justify-center items-center rounded-full
     md:cursor-pointer
     active:drop-shadow-lg
@@ -113,6 +113,7 @@ nav .nav-link.active {
 }
 .button-text .label{
     @apply hidden md:flex flex-col
+    items-center
     text-xs
 }
 
@@ -124,7 +125,7 @@ nav .nav-link.active {
 }
 
 .info{
-    @apply bg-sky-600 text-slate-50
+    @apply bg-sky-600 text-slate-50 items-center
 }
 
 .success{
