--- a/public/css/app.css
+++ b/public/css/app.css
@@ -464,6 +464,9 @@ Ensure the default browser behavior of the `hidden` attribute.
 .m-auto{
   margin: auto;
 }
+.m-12{
+  margin: 3rem;
+}
 .m-0{
   margin: 0px;
 }
@@ -477,6 +480,14 @@ Ensure the default browser behavior of the `hidden` attribute.
 .mx-1{
   margin-left: 0.25rem;
   margin-right: 0.25rem;
+}
+.my-12{
+  margin-top: 3rem;
+  margin-bottom: 3rem;
+}
+.my-3{
+  margin-top: 0.75rem;
+  margin-bottom: 0.75rem;
 }
 .my-auto{
   margin-top: auto;
@@ -525,11 +536,17 @@ Ensure the default browser behavior of the `hidden` attribute.
 .hidden{
   display: none;
 }
+.\!hidden{
+  display: none !important;
+}
 .h-0{
   height: 0px;
 }
 .h-7{
   height: 1.75rem;
+}
+.h-5{
+  height: 1.25rem;
 }
 .w-full{
   width: 100%;
@@ -537,11 +554,40 @@ Ensure the default browser behavior of the `hidden` attribute.
 .w-5{
   width: 1.25rem;
 }
-.w-40{
-  width: 10rem;
+.w-32{
+  width: 8rem;
 }
 .w-7{
   width: 1.75rem;
+}
+.w-40{
+  width: 10rem;
+}
+.w-1\/2{
+  width: 50%;
+}
+.w-max{
+  width: -webkit-max-content;
+  width: -moz-max-content;
+  width: max-content;
+}
+.w-12{
+  width: 3rem;
+}
+.w-16{
+  width: 4rem;
+}
+.w-1\/3{
+  width: 33.333333%;
+}
+.w-24{
+  width: 6rem;
+}
+.w-20{
+  width: 5rem;
+}
+.table-fixed{
+  table-layout: fixed;
 }
 .rotate-180{
   --tw-rotate: 180deg;
@@ -559,8 +605,14 @@ Ensure the default browser behavior of the `hidden` attribute.
 .flex-col{
   flex-direction: column;
 }
+.flex-col-reverse{
+  flex-direction: column-reverse;
+}
 .items-center{
   align-items: center;
+}
+.justify-start{
+  justify-content: flex-start;
 }
 .justify-end{
   justify-content: flex-end;
@@ -570,6 +622,9 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 .justify-between{
   justify-content: space-between;
+}
+.justify-around{
+  justify-content: space-around;
 }
 .self-start{
   align-self: flex-start;
@@ -585,6 +640,9 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 .rounded-sm{
   border-radius: 0.125rem;
+}
+.rounded-md{
+  border-radius: 0.375rem;
 }
 .rounded-l{
   border-top-left-radius: 0.25rem;
@@ -610,9 +668,25 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-border-opacity: 1;
   border-color: rgb(226 232 240 / var(--tw-border-opacity));
 }
+.border-red-600{
+  --tw-border-opacity: 1;
+  border-color: rgb(220 38 38 / var(--tw-border-opacity));
+}
+.border-blue-600{
+  --tw-border-opacity: 1;
+  border-color: rgb(37 99 235 / var(--tw-border-opacity));
+}
+.border-slate-300{
+  --tw-border-opacity: 1;
+  border-color: rgb(203 213 225 / var(--tw-border-opacity));
+}
 .bg-slate-500{
   --tw-bg-opacity: 1;
   background-color: rgb(100 116 139 / var(--tw-bg-opacity));
+}
+.bg-slate-300{
+  --tw-bg-opacity: 1;
+  background-color: rgb(203 213 225 / var(--tw-bg-opacity));
 }
 .bg-slate-200{
   --tw-bg-opacity: 1;
@@ -640,11 +714,17 @@ Ensure the default browser behavior of the `hidden` attribute.
 .p-3{
   padding: 0.75rem;
 }
-.p-0{
-  padding: 0px;
-}
 .p-6{
   padding: 1.5rem;
+}
+.p-5{
+  padding: 1.25rem;
+}
+.p-12{
+  padding: 3rem;
+}
+.p-0{
+  padding: 0px;
 }
 .p-2{
   padding: 0.5rem;
@@ -653,13 +733,17 @@ Ensure the default browser behavior of the `hidden` attribute.
   padding-top: 1rem;
   padding-bottom: 1rem;
 }
-.px-3{
-  padding-left: 0.75rem;
-  padding-right: 0.75rem;
+.px-6{
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
 }
 .py-2{
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
+}
+.px-3{
+  padding-left: 0.75rem;
+  padding-right: 0.75rem;
 }
 .pt-5{
   padding-top: 1.25rem;
@@ -667,11 +751,21 @@ Ensure the default browser behavior of the `hidden` attribute.
 .pt-6{
   padding-top: 1.5rem;
 }
+.text-left{
+  text-align: left;
+}
 .text-center{
   text-align: center;
 }
+.text-right{
+  text-align: right;
+}
 .align-baseline{
   vertical-align: baseline;
+}
+.text-lg{
+  font-size: 1.125rem;
+  line-height: 1.75rem;
 }
 .text-sm{
   font-size: 0.875rem;
@@ -694,17 +788,25 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-text-opacity: 1;
   color: rgb(248 250 252 / var(--tw-text-opacity));
 }
+.text-slate-900{
+  --tw-text-opacity: 1;
+  color: rgb(15 23 42 / var(--tw-text-opacity));
+}
 .text-slate-700{
   --tw-text-opacity: 1;
   color: rgb(51 65 85 / var(--tw-text-opacity));
 }
+.text-red-600{
+  --tw-text-opacity: 1;
+  color: rgb(220 38 38 / var(--tw-text-opacity));
+}
+.text-blue-600{
+  --tw-text-opacity: 1;
+  color: rgb(37 99 235 / var(--tw-text-opacity));
+}
 .text-gray-50{
   --tw-text-opacity: 1;
   color: rgb(249 250 251 / var(--tw-text-opacity));
-}
-.text-slate-900{
-  --tw-text-opacity: 1;
-  color: rgb(15 23 42 / var(--tw-text-opacity));
 }
 .no-underline{
   -webkit-text-decoration-line: none;
@@ -941,22 +1043,19 @@ nav .nav-link.active::after{
 
 .button{
   display: flex;
-  height: 1.25rem;
+  height: 1.75rem;
   width: 1.75rem;
   align-items: center;
   justify-content: center;
   border-radius: 9999px;
 }
 
+.button:active{
+  --tw-drop-shadow: drop-shadow(0 10px 8px rgb(0 0 0 / 0.04)) drop-shadow(0 4px 3px rgb(0 0 0 / 0.1));
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
+}
+
 @media (min-width: 768px){
-
-  .button{
-    height: 1.75rem;
-  }
-
-  .button{
-    width: 1.75rem;
-  }
 
   .button{
     cursor: pointer;
@@ -979,13 +1078,7 @@ nav .nav-link.active::after{
     padding: 0.75rem;
   }
 }
-.button-text:first-child{
-  margin-right: 0.25rem;
-  padding: 0.75rem;
-}
-/*.button-text:last-child{*/
-/*    @apply p-3 ml-1*/
-/*}*/
+
 .button-text .icon{
   margin: auto;
   display: flex;
@@ -995,11 +1088,17 @@ nav .nav-link.active::after{
   justify-content: center;
   border-radius: 9999px;
 }
+
+.button-text .icon:active{
+  --tw-drop-shadow: drop-shadow(0 10px 8px rgb(0 0 0 / 0.04)) drop-shadow(0 4px 3px rgb(0 0 0 / 0.1));
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
+}
 .button-text .label{
   display: none;
   flex-direction: column;
-  font-size: 0.875rem;
-  line-height: 1.25rem;
+  align-items: center;
+  font-size: 0.75rem;
+  line-height: 1rem;
 }
 @media (min-width: 768px){
 
@@ -1022,6 +1121,7 @@ nav .nav-link.active::after{
 }
 
 .info{
+  align-items: center;
   --tw-bg-opacity: 1;
   background-color: rgb(2 132 199 / var(--tw-bg-opacity));
   --tw-text-opacity: 1;
@@ -1040,6 +1140,52 @@ nav .nav-link.active::after{
   --tw-text-opacity: 1;
   color: rgb(248 250 252 / var(--tw-text-opacity));
 }
+.before\:block::before{
+  content: var(--tw-content);
+  display: block;
+}
+.before\:font-bold::before{
+  content: var(--tw-content);
+  font-weight: 700;
+}
+.before\:content-\[\'R\E9 f\E9rence\'\]::before{
+  --tw-content: 'Référence';
+  content: var(--tw-content);
+}
+.before\:content-\[\'Montant\'\]::before{
+  --tw-content: 'Montant';
+  content: var(--tw-content);
+}
+.before\:content-\[\'Description\'\]::before{
+  --tw-content: 'Description';
+  content: var(--tw-content);
+}
+.before\:content-\[\'Prix\'\]::before{
+  --tw-content: 'Prix';
+  content: var(--tw-content);
+}
+.before\:content-\[\'Tva\'\]::before{
+  --tw-content: 'Tva';
+  content: var(--tw-content);
+}
+.before\:content-\[\'Quantit\E9\'\]::before{
+  --tw-content: 'Quantité';
+  content: var(--tw-content);
+}
+.before\:content-\[\'Remise\'\]::before{
+  --tw-content: 'Remise';
+  content: var(--tw-content);
+}
+.before\:content-\[\'Total\'\]::before{
+  --tw-content: 'Total';
+  content: var(--tw-content);
+}
+.last\:flex:last-child{
+  display: flex;
+}
+.last\:\!flex:last-child{
+  display: flex !important;
+}
 .odd\:bg-white:nth-child(odd){
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
@@ -1047,6 +1193,12 @@ nav .nav-link.active::after{
 .even\:bg-slate-100:nth-child(even){
   --tw-bg-opacity: 1;
   background-color: rgb(241 245 249 / var(--tw-bg-opacity));
+}
+.last-of-type\:flex:last-of-type{
+  display: flex;
+}
+.last-of-type\:\!flex:last-of-type{
+  display: flex !important;
 }
 .focus-within\:border-slate-600:focus-within{
   --tw-border-opacity: 1;
@@ -1056,6 +1208,11 @@ nav .nav-link.active::after{
   font-weight: 700;
 }
 @media (min-width: 768px){
+
+  .md\:mx-3{
+    margin-left: 0.75rem;
+    margin-right: 0.75rem;
+  }
 
   .md\:mx-12{
     margin-left: 3rem;
@@ -1078,6 +1235,14 @@ nav .nav-link.active::after{
     display: flex;
   }
 
+  .md\:table-header-group{
+    display: table-header-group;
+  }
+
+  .md\:table-row{
+    display: table-row;
+  }
+
   .md\:hidden{
     display: none;
   }
@@ -1086,11 +1251,58 @@ nav .nav-link.active::after{
     width: 50%;
   }
 
+  .md\:w-32{
+    width: 8rem;
+  }
+
+  .md\:w-16{
+    width: 4rem;
+  }
+
+  .md\:w-1\/3{
+    width: 33.333333%;
+  }
+
+  .md\:w-20{
+    width: 5rem;
+  }
+
+  .md\:w-24{
+    width: 6rem;
+  }
+
   .md\:flex-row{
     flex-direction: row;
   }
 
+  .md\:flex-col{
+    flex-direction: column;
+  }
+
+  .md\:p-5{
+    padding: 1.25rem;
+  }
+
+  .md\:pl-5{
+    padding-left: 1.25rem;
+  }
+
   .md\:pt-0{
     padding-top: 0px;
+  }
+
+  .md\:before\:content-\[\'\'\]::before{
+    --tw-content: '';
+    content: var(--tw-content);
+  }
+
+  .md\:odd\:bg-slate-100:nth-child(odd){
+    --tw-bg-opacity: 1;
+    background-color: rgb(241 245 249 / var(--tw-bg-opacity));
+  }
+
+  .md\:even\:bg-white:nth-child(even){
+    --tw-bg-opacity: 1;
+    background-color: rgb(255 255 255 / var(--tw-bg-opacity));
   }
 }
