--- a/public/css/app.css
+++ b/public/css/app.css
@@ -536,17 +536,11 @@ Ensure the default browser behavior of the `hidden` attribute.
 .hidden{
   display: none;
 }
-.\!hidden{
-  display: none !important;
-}
 .h-0{
   height: 0px;
 }
 .h-7{
   height: 1.75rem;
-}
-.h-5{
-  height: 1.25rem;
 }
 .w-full{
   width: 100%;
@@ -574,17 +568,14 @@ Ensure the default browser behavior of the `hidden` attribute.
 .w-12{
   width: 3rem;
 }
-.w-16{
-  width: 4rem;
-}
 .w-1\/3{
   width: 33.333333%;
 }
+.w-16{
+  width: 4rem;
+}
 .w-24{
   width: 6rem;
-}
-.w-20{
-  width: 5rem;
 }
 .table-fixed{
   table-layout: fixed;
@@ -607,6 +598,9 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 .flex-col-reverse{
   flex-direction: column-reverse;
+}
+.flex-wrap{
+  flex-wrap: wrap;
 }
 .items-center{
   align-items: center;
@@ -638,11 +632,11 @@ Ensure the default browser behavior of the `hidden` attribute.
 .rounded-full{
   border-radius: 9999px;
 }
-.rounded-sm{
-  border-radius: 0.125rem;
-}
 .rounded-md{
   border-radius: 0.375rem;
+}
+.rounded-sm{
+  border-radius: 0.125rem;
 }
 .rounded-l{
   border-top-left-radius: 0.25rem;
@@ -723,11 +717,11 @@ Ensure the default browser behavior of the `hidden` attribute.
 .p-12{
   padding: 3rem;
 }
-.p-0{
-  padding: 0px;
-}
 .p-2{
   padding: 0.5rem;
+}
+.p-0{
+  padding: 0px;
 }
 .py-4{
   padding-top: 1rem;
@@ -1140,6 +1134,119 @@ nav .nav-link.active::after{
   --tw-text-opacity: 1;
   color: rgb(248 250 252 / var(--tw-text-opacity));
 }
+
+/**/
+.table-data-wrapper{
+  margin-top: 3rem;
+  margin-bottom: 3rem;
+  display: flex;
+  width: 100%;
+  flex-direction: column;
+}
+.table-data-header{
+  margin: 0px;
+  display: none;
+  width: 100%;
+  justify-content: space-between;
+  --tw-bg-opacity: 1;
+  background-color: rgb(203 213 225 / var(--tw-bg-opacity));
+  padding: 1rem;
+}
+@media (min-width: 768px){
+
+  .table-data-header{
+    display: flex;
+  }
+}
+.table-data-header .middle{
+  display: flex;
+  width: 33.333333%;
+  flex-direction: row;
+  justify-content: space-between;
+  padding-left: 2rem;
+  padding-right: 1rem;
+}
+.table-data-header .right{
+  display: flex;
+  width: 33.333333%;
+  flex-direction: row;
+  justify-content: space-between;
+  padding-left: 1rem;
+  padding-right: 2rem;
+}
+.table-data-row{
+  display: flex;
+  width: 100%;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  padding: 1rem;
+}
+.table-data-row:nth-child(odd){
+  --tw-bg-opacity: 1;
+  background-color: rgb(241 245 249 / var(--tw-bg-opacity));
+}
+.table-data-row:nth-child(even){
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+@media (min-width: 768px){
+
+  .table-data-row{
+    flex-direction: row;
+  }
+
+  .table-data-row:nth-child(odd){
+    --tw-bg-opacity: 1;
+    background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+  }
+
+  .table-data-row:nth-child(even){
+    --tw-bg-opacity: 1;
+    background-color: rgb(241 245 249 / var(--tw-bg-opacity));
+  }
+}
+.table-data-row .middle{
+  display: flex;
+  width: 100%;
+  flex-direction: row;
+  justify-content: space-between;
+}
+@media (min-width: 768px){
+
+  .table-data-row .middle{
+    width: 33.333333%;
+  }
+
+  .table-data-row .middle{
+    padding-left: 2rem;
+  }
+
+  .table-data-row .middle{
+    padding-right: 1rem;
+  }
+}
+.table-data-row .right{
+  display: flex;
+  width: 100%;
+  flex-direction: row;
+  justify-content: space-between;
+}
+@media (min-width: 768px){
+
+  .table-data-row .right{
+    width: 33.333333%;
+  }
+
+  .table-data-row .right{
+    padding-left: 1rem;
+  }
+
+  .table-data-row .right{
+    padding-right: 2rem;
+  }
+}
+/**/
 .before\:block::before{
   content: var(--tw-content);
   display: block;
@@ -1180,12 +1287,6 @@ nav .nav-link.active::after{
   --tw-content: 'Total';
   content: var(--tw-content);
 }
-.last\:flex:last-child{
-  display: flex;
-}
-.last\:\!flex:last-child{
-  display: flex !important;
-}
 .odd\:bg-white:nth-child(odd){
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
@@ -1193,12 +1294,6 @@ nav .nav-link.active::after{
 .even\:bg-slate-100:nth-child(even){
   --tw-bg-opacity: 1;
   background-color: rgb(241 245 249 / var(--tw-bg-opacity));
-}
-.last-of-type\:flex:last-of-type{
-  display: flex;
-}
-.last-of-type\:\!flex:last-of-type{
-  display: flex !important;
 }
 .focus-within\:border-slate-600:focus-within{
   --tw-border-opacity: 1;
@@ -1255,20 +1350,12 @@ nav .nav-link.active::after{
     width: 8rem;
   }
 
-  .md\:w-16{
-    width: 4rem;
-  }
-
   .md\:w-1\/3{
     width: 33.333333%;
   }
 
-  .md\:w-20{
-    width: 5rem;
-  }
-
-  .md\:w-24{
-    width: 6rem;
+  .md\:w-16{
+    width: 4rem;
   }
 
   .md\:flex-row{
